@@ -6,6 +6,9 @@
 - Fitness function based on protein output extrapolation.
 - Requires latPack/1.9.1-15 or greater (but not enforced)
 - Fitness function is purely linear (no x / x0 + x transformation)
+- Minimum fitness value is 1e-7
+- Posttranslation simulation time is 1e6
+- `DEFAULT_REEVALUATION_RATIO` changed to 0.25
 
 ## [0.0.10] - 2019-03-17
 ### Added
